2006-07-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c(display_help): Tweaked verbage.

	* src/libcommon/str.c, src/libcommon/str.h: Added strhex2bin().
	  Renamed strhex() to strbin2hex() and changed prototype.
	* src/libmunge/auth_send.c(_name_auth_file): Changed behavior to name
	  auth file by XORing the first half of the random component of the
	  auth pipe with the second half.
	* src/munged/auth_recv.c: Renamed strhex() to strbin2hex().

2006-07-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/auth_send.c(_name_auth_file): Updated function comment.
	* src/munged/auth_recv.c(_name_auth_pipe): Updated function comment.

	* BUGS, README.AIX, src/libcommon/munge_defs.h, src/munged/auth_recv.c,
	  src/munged/conf.c, src/munged/conf.h, src/munged/munged.8.in:
	  Changed MUNGE_AUTH_PIPE_DIR to MUNGE_AUTH_SERVER_DIR.
	  Changed MUNGE_AUTH_FILE_DIR to MUNGE_AUTH_CLIENT_DIR.
	  Changed "--auth-pipe-dir" to "--auth-server-dir".
	  Changed "--auth-file-dir" to "--auth-client-dir".
	* src/libcommon/m_msg.c, src/libcommon/m_msg.h,
	  src/libmunge/auth_send.c, src/munged/auth_recv.c:
	  Changed a_pipe_* to auth_s_*, a_file_* to auth_c_*.

	* src/etc/munge.init.in: Removed "--force" from OPTIONS var.

2006-07-20  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Changed behavior to only alter CFLAGS if they
	  are not explicitly set.

	* src/munged/munged.c(main): Prevented PRNG seed from being written on
	  exit if an error was encountered while reading it during startup.
	* src/munged/random.c(random_init): Changed to ignore PRNG seed unless
	  it has proper mode, ownership, and permissions.
	* src/munged/random.h(random_init): Changed prototype to return int.

	* src/munged/auth_recv.c(auth_recv_init): Tweaked err msg verbage.

	* src/etc/Makefile.am, src/libcommon/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am: Tweaked dir perms via install-data-local.
